--- a/main.html
+++ b/main.html
@@ -60,5 +60,10 @@
         <script src="code/music.js"></script>
 
         <script>$(document).ready(function() { new Enjine.Application().Initialize(new Mario.LoadingState(), 320, 240) });</script>
-	</body>
+        <form style="position: relative; left: 185px; color: black">
+            <label for="tokenId">Token ID: </label>
+            <input type="text" id="tokenId" name="tokenId">
+            <input type="submit" value="save"><br>
+        </form>
+    </body>
 </html>
