--- a/minTest.html
+++ b/minTest.html
@@ -10,7 +10,7 @@
 		</canvas>
         
 		<script src="enjine.min.js"></script>
-		<script src="mario.min.js"></script>
+		<script src="mario.js"></script>
         <script>$(document).ready(function() { new Enjine.Application().Initialize(new Mario.LoadingState(), 320, 240) });</script>
 	</body>
 </html>
