--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<canvas id="canvas" width="640" height="480">
-			<p>Your browser does not support the canvas element.</p>
+			<p>Your browser does not support the canvas element</p>
 		</canvas>
 
         <!-- Enjine Includes -->
